<resources>
    <string name="app_name">Focus Timer</string>
    <string name="login_title">Login</string>
    <string name="username_box">Username</string>
    <string name="password_box">Password</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="name_box">Name</string>
    <string name="password_confirm_box">Confirm Password</string>
    <string name="login_text">Already have an account?</string>
    <string name="home_page_title">Home</string>
    <string name="home_page_focus_message">Let\'s get to focusing %1$s!</string>
    <string name="start_a_focus_session">Start a Focus Session</string>
    <string name="to_do_list">To-Do List</string>
    <string name="home_page_focus_score_message"> Average focus score: %1$d%%</string>
    <string name="home_page_tasks_message">Tasks due in the next week: %1$d</string>
    <string name="update_account">Update Account</string>
    <string name="update_button_text">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="focus_session_title">Focus Session</string>
    <string name="pick_focus_method">Pick a Focus Method</string>
    <string name="classic_method">Classic</string>
    <string name="classic_description">Set your own timer</string>
    <string name="pomodoro_method">Pomodoro</string>
    <string name="pomodoro_description">(25min focus - 5min break) x4 then 25min break</string>
    <string name="flowmodoro_method">Flowmodoro</string>
    <string name="flowmodoro_description">Focus for a session, get 1/5 as long break</string>
    <string name="to_do_list_title">To-Do List</string>
    <string name="add_task_button">+ Add Task</string>
    <string name="completed_tasks_button">Completed Tasks</string>
    <string name="link_calendar_button">Link Google Calendar</string>
    <string name="due_date">Due: %1$s</string>
    <string name="create_task_title">Create New Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Description</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="save_task">Save Task</string>
    <string name="update_task_title">Update Task</string>
    <string name="change_due_date">Change Due Date</string>
    <string name="no_date_selected">No date selected</string>
    <string name="status_label">Status:</string>
    <string name="delete_task">Delete Task</string>
    <string name="google_client_id">414431470546-nm2igt0f3o1tt3m58lpar3aunlo23655.apps.googleusercontent.com</string>
    <string name="no_tasks">No tasks available</string>
    <string name="no_completed_tasks">No completed tasks</string>
    <string name="loading">Loading…</string>
    <string name="mm_hint">MM</string>
    <string name="colon">:</string>
    <string name="ss_hint">SS</string>
    <string name="start_button_text">Start</string>
    <string name="reset_button_text">Reset</string>
    <string name="pomodoro_timer_value">25:00</string>
    <string name="pause_button_text">Pause</string>
    <string name="resume_button_text">Resume</string>
    <string name="set_and_start_button_text">Set &amp; Start</string>
    <string name="start_focus_button_text">Start Focus</string>
    <string name="stop_and_start_break_button_text">Stop &amp; Start Break</string>
    <string name="please_enter_time_toast">Please enter a time</string>
    <string name="times_up_toast">Time\'s up!</string>
    <string name="flowmodoro_min_focus_toast">Focus longer to earn a break!</string>
    <string name="pick_up_count_label">Phone pick ups: %1$d</string>
    <string name="log_out">Log Out</string>
    <string name="session_history_button">Session History</string>
    <string name="session_history_title">Session History</string>
    <string name="no_sessions">No sessions found</string>
    <string name="break_button_text">Break</string>
    <string name="focus_button_text">Focus</string>
    <string name="session_score_label">Score: %1$d</string>
    <string name="session_duration_label">Duration: %1$02d:%2$02d</string>
    <string name="session_details_label">Rounds: %1$d | Pickups: %2$d</string>
    <string name="end_session_button_text">End Session</string>
</resources>